# aws-ecs-infrastructure

./: .gitignore  Cargo.toml  Dockerfile  docs.md
.github/workflows/: deploy.yml
src/: main.rs
