[package]
name = "tauri-container"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Web Framework
axum = "0.7"

# The Async Runtime
tokio = { version = "1.0", features = ["full"] }

# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Observability (Critical for AWS CloudWatch)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }